--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@vercel/analytics": "^1.4.1",
     "bootstrap": "^5.3.3",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
